--- a/style.css
+++ b/style.css
@@ -1,9 +1,34 @@
+* {
+    margin-left: 5px;
+    margin-right: 5px;
+
+}
+body{
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 18px;
+    line-height: 34px;
+    color: #777;
+}
+.navbar-brand {
+    background: #4aaaa5
+}
+.navbar {
+    border-bottom: 2px solid#777;
+}
+.nav-right {
+    display: inline-block;
+    float: right;
+}
 .portfolio {
     color:#4aaaa5
 }
-.container {
+.profile-border {
     border-style:2px solid #0000;
 }
 .img-responsive {
     border:2px solid #4aaaa5;
+}
+.navbar-fixed-bottom {
+    height: 105px;
+    text-align: center;
 }
