--- a/style.css
+++ b/style.css
@@ -1,34 +1,48 @@
-* {
-    margin-left: 5px;
-    margin-right: 5px;
-
+.navbar {
+    border-bottom: 3px solid #dddddd;
 }
 body{
     font-family: Arial, Helvetica, sans-serif;
     font-size: 18px;
     line-height: 34px;
     color: #777;
+    background: url("concrete_seamless.png");
 }
-.navbar-brand {
-    background: #4aaaa5
+.profile {
+    background: #4aaaa5;
 }
-.navbar {
-    border-bottom: 2px solid#777;
+.main-section {
+    border: 1px solid #dddddd;
+    background: #ffffff;
 }
-.nav-right {
-    display: inline-block;
-    float: right;
+
+
+h1 {
+    padding-bottom: 10px;
+    font-size: 30px;
+    line-height: 49px;
+    border-bottom: 3px solid #dddddd;
+    color: #4aaaa5;
 }
+
 .portfolio {
     color:#4aaaa5
 }
 .profile-border {
     border-style:2px solid #0000;
 }
+
+
 .img-responsive {
     border:2px solid #4aaaa5;
 }
-.navbar-fixed-bottom {
-    height: 105px;
+.footer {
+    position: absolute;
+    bottom: 0;
+    width: 100%;
+    height: 60px;
+    line-height: 60px;
+    background-color: #f5f5f5;
     text-align: center;
+    clear: both;
 }
