--- a/style.css
+++ b/style.css
@@ -1,6 +1,9 @@
 .navbar {
     border-bottom: 3px solid #dddddd;
 }
+.nav-link {
+    color: #ffffff;
+}
 body{
     font-family: Arial, Helvetica, sans-serif;
     font-size: 18px;
@@ -10,12 +13,12 @@ body{
 }
 .profile {
     background: #4aaaa5;
+    color: #ffffff;
 }
 .main-section {
     border: 1px solid #dddddd;
     background: #ffffff;
 }
-
 
 h1 {
     padding-bottom: 10px;
@@ -36,13 +39,20 @@ h1 {
 .img-responsive {
     border:2px solid #4aaaa5;
 }
+.btn {
+    background-color: #4aaaa5;
+    color: #ffffff;
+
+}
 .footer {
+    color: #ffffff;
     position: absolute;
     bottom: 0;
     width: 100%;
     height: 60px;
     line-height: 60px;
-    background-color: #f5f5f5;
+    background-color: #666666;
     text-align: center;
-    clear: both;
+    border-top: 8px solid #4aaaa5;
+    font-size: 12px;
 }
